Do not bring up containers of disabled services
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/docker_engine/tasks/debian.yml
+++ b/roles/docker_engine/tasks/debian.yml
@@ -111,6 +111,7 @@
     pull: '{{ item.pull | default(omit) }}'
     recreate: '{{ item.recreate | default(omit) }}'
     remove_images: '{{ item.remove_images | default(omit) }}'
+    remove_orphans: '{{ item.remove_orphans | default(omit) }}'
     remove_volumes: '{{ item.remove_volumes | default(omit) }}'
     restarted: '{{ item.restarted | default(omit) }}'
     scale: '{{ item.scale | default(omit) }}'
@@ -148,6 +149,7 @@
     pull: '{{ item.pull | default(omit) }}'
     recreate: '{{ item.recreate | default(omit) }}'
     remove_images: '{{ item.remove_images | default(omit) }}'
+    remove_orphans: '{{ item.remove_orphans | default(omit) }}'
     remove_volumes: '{{ item.remove_volumes | default(omit) }}'
     restarted: '{{ item.restarted | default(omit) }}'
     scale: '{{ item.scale | default(omit) }}'
