--- a/roles/satnogs/defaults/main.yml
+++ b/roles/satnogs/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 docker_rigctld_image: 'librespace/hamlib:4.0'
 docker_rotctld_image: 'librespace/hamlib:4.0'
-docker_satnogs_client_image: 'librespace/satnogs-client:master'
+docker_satnogs_client_image: 'librespace/satnogs-client:1.9.2'
 
 satnogs_rig_ip: 'rigctld'
