--- a/roles/docker_engine/tasks/main.yml
+++ b/roles/docker_engine/tasks/main.yml
@@ -1,4 +1,4 @@
 ---
 - name: Import tasks debian
   ansible.builtin.import_tasks: debian.yml
-  when: ansible_distribution in ('Debian')
+  when: ansible_distribution in ('Ubuntu', 'Debian')
