--- a/roles/docker_engine/vars/main.yml
+++ b/roles/docker_engine/vars/main.yml
@@ -59,5 +59,7 @@ docker_compose_packages_buster:
   - 'urllib3==2.0.7'
   - 'websocket-client==0.59.0'
   - 'zipp==3.15.0'
+docker_compose_packages_focal: '{{ docker_compose_packages_buster }}'
+docker_compose_packages_jammy: '{{ docker_compose_packages_bookworm }}'
 docker_default:
   log_driver: 'journald'
