Stop and disable services before removing them
Fixes #179

Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs_cleanup/handlers/main.yml
+++ b/roles/satnogs_cleanup/handlers/main.yml
@@ -7,6 +7,16 @@
   until: res is success
   retries: '{{ package_retries }}'
   delay: '{{ package_delay }}'
+- name: Stop and disable services
+  ansible.builtin.service:
+    name: '{{ item }}'
+    enabled: false
+    state: 'stopped'
+  become: true
+  loop:
+    - 'rigctld'
+    - 'rotctld'
+    - 'satnogs-client'
 - name: Reload systemd daemon
   ansible.builtin.systemd:
     daemon_reload: true
