Increase limit of total memory in order to enable ZRAM
Fixes #188

Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -16,4 +16,4 @@
   ansible.builtin.import_tasks: cron.yml
 - name: Import tasks for zram
   ansible.builtin.import_tasks: zram.yml
-  when: ansible_memtotal_mb < zram_memtotal_min
+  when: ansible_memtotal_mb <= zram_memtotal_min
